css/_page-head.scss
/*------------------------------------*\
    #PAGE HEADER STYLES
\*------------------------------------*/

header {

  //background-color:#e8e8e8;
  position: relative;
  z-index:2;

  @include media-breakpoint-up(lg){
    position: absolute;
    top:0;
    left:0;
    width:100%;
    background:none;
    padding:0;
  }

}

h2.title {

	position:relative;
	width:250px;
  height:70px;
	margin:20px auto;
  margin-left: 0;
  z-index:1;

  @include media-breakpoint-up(lg){
    width:280px;
    height:70px;
  }

	a {

		display:block;
		position:relative;
		height:inherit;
		width: inherit;
		margin:0 auto;

		background-image:url(../img/Assure-Energy-Logo.svg);
		background-repeat:no-repeat;
		background-size:contain;

    @include media-breakpoint-up(lg){
      background-image:url(../img/Assure-Energy-Logo-white.svg);
    }

	}

}

